// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SWITCH_LAYOUT_SYSTEM switches from flex to pins correctly 1`] = `
Array [
  Object {
    "arbitraryJSBlock": null,
    "blockOrExpression": "block",
    "comments": Object {
      "leadingComments": Array [],
      "trailingComments": Array [],
    },
    "declarationSyntax": "var",
    "isFunction": true,
    "name": "App",
    "param": null,
    "propsUsed": Array [],
    "returnStatementComments": Object {
      "leadingComments": Array [],
      "trailingComments": Array [],
    },
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "View",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Object {
            "data-uid": Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "type": "ATTRIBUTE_VALUE",
              "value": "bbb",
            },
            "style": Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "content": Array [
                Object {
                  "comments": Object {
                    "leadingComments": Array [],
                    "trailingComments": Array [],
                  },
                  "key": "left",
                  "type": "PROPERTY_ASSIGNMENT",
                  "value": Object {
                    "comments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "type": "ATTRIBUTE_VALUE",
                    "value": 0,
                  },
                },
                Object {
                  "comments": Object {
                    "leadingComments": Array [],
                    "trailingComments": Array [],
                  },
                  "key": "top",
                  "type": "PROPERTY_ASSIGNMENT",
                  "value": Object {
                    "comments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "type": "ATTRIBUTE_VALUE",
                    "value": 0,
                  },
                },
                Object {
                  "comments": Object {
                    "leadingComments": Array [],
                    "trailingComments": Array [],
                  },
                  "key": "width",
                  "type": "PROPERTY_ASSIGNMENT",
                  "value": Object {
                    "comments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "type": "ATTRIBUTE_VALUE",
                    "value": 200,
                  },
                },
                Object {
                  "comments": Object {
                    "leadingComments": Array [],
                    "trailingComments": Array [],
                  },
                  "key": "height",
                  "type": "PROPERTY_ASSIGNMENT",
                  "value": Object {
                    "comments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "type": "ATTRIBUTE_VALUE",
                    "value": 300,
                  },
                },
                Object {
                  "comments": Object {
                    "leadingComments": Array [],
                    "trailingComments": Array [],
                  },
                  "key": "position",
                  "type": "PROPERTY_ASSIGNMENT",
                  "value": Object {
                    "comments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "type": "ATTRIBUTE_VALUE",
                    "value": "absolute",
                  },
                },
              ],
              "type": "ATTRIBUTE_NESTED_OBJECT",
            },
          },
          "type": "JSX_ELEMENT",
        },
      ],
      "name": Object {
        "baseVariable": "View",
        "propertyPath": Object {
          "propertyElements": Array [],
        },
      },
      "props": Object {
        "data-uid": Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "type": "ATTRIBUTE_VALUE",
          "value": "aaa",
        },
        "layout": Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "type": "ATTRIBUTE_VALUE",
          "value": Object {},
        },
        "style": Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "content": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "backgroundColor",
              "type": "PROPERTY_ASSIGNMENT",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "value": "#FFFFFF",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "position",
              "type": "PROPERTY_ASSIGNMENT",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "value": "absolute",
              },
            },
          ],
          "type": "ATTRIBUTE_NESTED_OBJECT",
        },
      },
      "type": "JSX_ELEMENT",
    },
    "type": "UTOPIA_JSX_COMPONENT",
    "usedInReactDOMRender": false,
  },
]
`;

exports[`SWITCH_LAYOUT_SYSTEM switches from pins to flex correctly 1`] = `
Array [
  Object {
    "arbitraryJSBlock": null,
    "blockOrExpression": "block",
    "comments": Object {
      "leadingComments": Array [],
      "trailingComments": Array [],
    },
    "declarationSyntax": "var",
    "isFunction": true,
    "name": "App",
    "param": null,
    "propsUsed": Array [],
    "returnStatementComments": Object {
      "leadingComments": Array [],
      "trailingComments": Array [],
    },
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "View",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Object {
            "data-uid": Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "type": "ATTRIBUTE_VALUE",
              "value": "bbb",
            },
            "style": Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "content": Array [
                Object {
                  "comments": Object {
                    "leadingComments": Array [],
                    "trailingComments": Array [],
                  },
                  "key": "position",
                  "type": "PROPERTY_ASSIGNMENT",
                  "value": Object {
                    "comments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "type": "ATTRIBUTE_VALUE",
                    "value": "relative",
                  },
                },
                Object {
                  "comments": Object {
                    "leadingComments": Array [],
                    "trailingComments": Array [],
                  },
                  "key": "flexBasis",
                  "type": "PROPERTY_ASSIGNMENT",
                  "value": Object {
                    "comments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "type": "ATTRIBUTE_VALUE",
                    "value": 200,
                  },
                },
                Object {
                  "comments": Object {
                    "leadingComments": Array [],
                    "trailingComments": Array [],
                  },
                  "key": "height",
                  "type": "PROPERTY_ASSIGNMENT",
                  "value": Object {
                    "comments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "type": "ATTRIBUTE_VALUE",
                    "value": 300,
                  },
                },
              ],
              "type": "ATTRIBUTE_NESTED_OBJECT",
            },
          },
          "type": "JSX_ELEMENT",
        },
      ],
      "name": Object {
        "baseVariable": "View",
        "propertyPath": Object {
          "propertyElements": Array [],
        },
      },
      "props": Object {
        "data-uid": Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "type": "ATTRIBUTE_VALUE",
          "value": "aaa",
        },
        "layout": Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "type": "ATTRIBUTE_VALUE",
          "value": Object {},
        },
        "style": Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "content": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "backgroundColor",
              "type": "PROPERTY_ASSIGNMENT",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "value": "#FFFFFF",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "display",
              "type": "PROPERTY_ASSIGNMENT",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "value": "flex",
              },
            },
          ],
          "type": "ATTRIBUTE_NESTED_OBJECT",
        },
      },
      "type": "JSX_ELEMENT",
    },
    "type": "UTOPIA_JSX_COMPONENT",
    "usedInReactDOMRender": false,
  },
]
`;
